# LBA-Q2Q

./: README.md
2023/dataset/: create_iq_rule.ipynb  explore_intermediate_questions.ipynb
2023/dataset_construction/: app.py
2024/: README.md  baseline.py  inference_GPT4_answer.py  inference_human_answer.py  requirements.txt
2024/finetune/: finetune.py  inference.py  run_finetune.sh  run_inference.sh  utils.py
2024/incontext/: README.md
2025/: inference_llava_confidence.py  inference_llava_model.py
2025/CogVLM/: baseline.py
2025/ICQA/FT/LLaVA/: pyproject.toml
2025/ICQA/FT/LLaVA/llava/eval/: eval_q2q.py  model_vqa_loader.py
2025/ICQA/FT/LLaVA/llava/model/: builder.py
2025/ICQA/FT/LLaVA/llava/train/: llava_trainer.py
2025/ICQA/FT/LLaVA/scripts/: convert_Q2Q.sh  convert_Q2Q_multi.sh  convert_checker.sh  convert_checker_to_llava.py  convert_q2q_to_llava.py  convert_q2q_to_llava_multi.py  inference_checker.sh  inference_checker_conf.sh  inference_q2q.sh  merge.sh  merge_lora_weights.py
2025/ICQA/FT/LLaVA/scripts/v1_5/: finetune_checker_lora.sh  finetune_q2q_lora.sh
2025/ICQA/FT/LLaVA/scripts/v1_5/eval/: checker.sh  q2q.sh
2025/InstructBlip/: baseline.py
2025/LLaVA/: inference_chaining.py  inference_model.py
2025/Qwen/: baseline.py  inference.py
amazon/: filter_amazon_mturk.ipynb  object_black_box.ipynb
dataset/: create_iq_rule.ipynb  explore_intermediate_questions.ipynb  generate_dataset.ipynb  object_list_extraction.py  preprocess_aq.py
dataset_construction/: filter_amazon_mturk.ipynb
evaluation/: evaluate.ipynb
(+56 files in other folders)
