[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "1.2.2.post1"
description = "Towards GPT-4 like large language and visual assistant."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch>=2.4.1", "torchvision>=0.19.1",
    "transformers==4.51.2", "sentencepiece", "shortuuid",
    "accelerate==1.6.0", "peft", "bitsandbytes", "timm==1.0.10",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn",
    "gradio==5.31.0","deepspeed==0.16.7",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops", "einops-exts"
]

[project.optional-dependencies]
train = ["deepspeed==0.16.7", "ninja", "wandb"]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://llava-vl.github.io"
"Bug Tracker" = "https://github.com/haotian-liu/LLaVA/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
